# gitx

./: CLAUDE.md  Cargo.toml  README.md
src/: branch_naming.rs  cli.rs  client_factory.rs  config.rs  git_ops.rs  git_utils.rs  github.rs  github_utils.rs  lib.rs  main.rs  metadata.rs  mock_github.rs  status_display.rs
src/commands/: README.md  branch.rs  commit.rs  diff.rs  init.rs  land.rs  mod.rs  prs.rs  status.rs
tests/: cli_tests.rs  gitx_diff_integration_tests.rs  init_tests.rs  integration_tests.rs  simple_workflow_test.rs  test_utils.rs
