[package]
name = "gitx"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
git2 = { version = "0.20.2", default-features = false } # TODO: remove default-features = false in the future
inquire = "0.7.5"
octocrab = "0.44.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"
tempfile = "3.20.0"
wiremock = "0.6.4"
